--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,16 +1,18 @@
-@use 'variables';
+@use 'variables' as v;
 @mixin modal-background{
-  background-color: variables.$Black-modal;
+  background-color: v.$Black-modal;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  z-index: 1;
+  //display: none;
+  overflow: hidden;
 }
 
-@mixin image-btn($top, $left){
-  background-color: variables.$White;
+@mixin image-btn($top, $left, $showDesktop){
+  background-color: v.$White;
   width: 40px;
   height: 40px;
   padding: 12px;
@@ -18,7 +20,47 @@
   position: absolute;
   top: $top;
   left: $left;
+  
   &:hover{
     cursor: pointer;
+  }
+  @media (min-width: 1115px){
+    @if ($showDesktop == true) {	
+      display:block;
+    }@else{
+      display:none;
+    }
+    //display: none;
+  }
+}
+@mixin changeNumber($pv, $ph){
+  width:25px;
+  //border:1px solid;
+  height:100%;
+  //display:grid;
+  //place-content: center;
+  padding:$pv $ph;
+  &:hover{
+    cursor: pointer;
+  }
+}
+@mixin button{
+  background-color:v.$Orange;
+  width: 100%;
+  height: 57px;
+  border-radius: 8px;
+  border: none;
+  color: v.$White;
+  font-size: 0.9em;
+  font-weight: 700;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  &:hover{
+    cursor: pointer;
+    opacity:0.5;
+
+
   }
 }
