--- a/sass/_modal-navbar.scss
+++ b/sass/_modal-navbar.scss
@@ -6,7 +6,7 @@
   }
   background-color: variables.$White;
   width: 250px;
-  height:100%;
+  height:100vh;
   padding: 28px 24px;
   //display: none;
   &__items {
