--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,12 +4,33 @@
 @use 'navbar';
 @use 'modal-navbar';
 @use 'gallery';
+@use 'details';
+@use 'input';
+@use 'modal-cart';
+@use 'modal-gallery';
 .main-container{
   width: 375px;
-  border:1px solid black;
+  //border:1px solid black;
   margin: auto;
   position: relative;
   @media (min-width: 1115px){
     width: 1115px;
   }
+}
+.content{
+  @media (min-width: 1115px){
+    display:flex;
+    padding:90px 50px;
+    gap: 124px;
+  }
+}
+.show{
+  display: block;
+}
+.cart-empty{
+  //border: 1px solid red;
+  font-weight: 700;
+  color: variables.$Black-modal;
+  text-align: center;
+  margin-top:30px;
 }
